--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: npm i
+      run: npm ci
     - name: Build React app
       run: npm run build
     - name: Deploy to GitHub Pages
